Fix player-popup top buttons vertical alignment

--- a/New-Minty/cinnamon/cinnamon.css
+++ b/New-Minty/cinnamon/cinnamon.css
@@ -1460,7 +1460,7 @@ StScrollBar StButton#hhandle:focus {
 .sound-player > StBoxLayout:first-child {
   border: 0 rgba(0, 0, 0, 0.1);
   border-bottom-width: 1px;
-  padding: .6em 1.3em .4em 1.3em;
+  padding: .2em 1.3em .7em 1.3em;
   spacing: .4em;
   font-weight: bold;
   font-size: 10pt;
