--- a/New-Minty/cinnamon/sass/main-modules/applet-modules/_sound.scss
+++ b/New-Minty/cinnamon/sass/main-modules/applet-modules/_sound.scss
@@ -8,7 +8,7 @@
     > StBoxLayout:first-child {
         border: 0 rgba(0, 0, 0, .1);
         border-bottom-width: 1px;
-        padding: .6em 1.3em .4em 1.3em;
+        padding: .2em 1.3em .7em 1.3em;
         spacing: .4em;
         font-weight: bold;
         font-size: 10pt;
